--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 Django==4.0.2
 django-cors-headers==4.3.0
+dj_database_url==2.1.0
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
 gunicorn==21.2.0
