--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.13.1
 gunicorn==21.2.0
 Pillow==10.1.0
 psycopg2==2.9.9
+python-dotenv==0.19.1
 pytz==2021.3
 requests==2.22.0
 sqlparse==0.4.2
